[gd_scene load_steps=15 format=2]

[ext_resource path="res://managers/state/game/StateManager.gd" type="Script" id=1]
[ext_resource path="res://managers/state/game/states/InÄ±t.gd" type="Script" id=2]
[ext_resource path="res://managers/state/game/states/Menu.gd" type="Script" id=3]
[ext_resource path="res://managers/state/game/states/Shop.gd" type="Script" id=4]
[ext_resource path="res://managers/state/game/states/Settings.gd" type="Script" id=5]
[ext_resource path="res://managers/state/game/states/Levels.gd" type="Script" id=6]
[ext_resource path="res://managers/state/game/states/LevelLoad.gd" type="Script" id=7]
[ext_resource path="res://managers/state/game/states/LevelPlay.gd" type="Script" id=8]
[ext_resource path="res://managers/state/game/states/CutScene.gd" type="Script" id=9]
[ext_resource path="res://managers/state/game/states/LevelPause.gd" type="Script" id=10]
[ext_resource path="res://managers/state/game/states/LevelLose.gd" type="Script" id=11]
[ext_resource path="res://managers/state/game/states/LevelRestart.gd" type="Script" id=12]
[ext_resource path="res://managers/state/game/states/AdBreak.gd" type="Script" id=13]
[ext_resource path="res://managers/state/game/states/LevelWin.gd" type="Script" id=14]

[node name="StateManager" type="Node"]
script = ExtResource( 1 )

[node name="Init" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Menu" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Shop" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Settings" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Levels" type="Node" parent="."]
script = ExtResource( 6 )

[node name="LevelLoad" type="Node" parent="."]
script = ExtResource( 7 )

[node name="LevelPlay" type="Node" parent="."]
script = ExtResource( 8 )

[node name="CutScene" type="Node" parent="."]
script = ExtResource( 9 )

[node name="LevelPause" type="Node" parent="."]
script = ExtResource( 10 )

[node name="LevelWin" type="Node" parent="."]
script = ExtResource( 14 )

[node name="LevelLose" type="Node" parent="."]
script = ExtResource( 11 )

[node name="LevelRestart" type="Node" parent="."]
script = ExtResource( 12 )

[node name="AdBreak" type="Node" parent="."]
script = ExtResource( 13 )
